test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-owned-from-oknil-nil.chpl
//  lhs: owned?  rhs: nil?  ok

class MyClass {  var x: int;  }



record MyRecord {
  var lhs: owned MyClass? = nil;
}

var myr = new MyRecord();


